--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,8 @@
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.5.1",
     "nodemon": "^3.0.1",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "sqlite3": "^5.1.6"
   },
   "description": ""
 }
